--- a/hello-k8s.yml
+++ b/hello-k8s.yml
@@ -3,10 +3,11 @@ kind: Service
 metadata:
   name: hello-k8s
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
     - port: 80
       targetPort: 8080
+      protocol: TCP
   selector:
     app: hello-k8s
 ---
