--- a/hello-k8s.yml
+++ b/hello-k8s.yml
@@ -1,15 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: service-hello-k8s
-spec:
-  type: NodePort
-  ports:
-    - port: 80
-      targetPort: 8080
-      protocol: TCP
-  selector:
-    app: hello-k8s
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -33,10 +21,36 @@ spec:
       containers:
         - name: hello-k8s
           image: CONTAINER_IMAGE
-          securityContext:
-            privileged: false
-            readOnlyRootFilesystem: true
-            allowPrivilegeEscalation: false
           ports:
-            - containerPort: 8080
-
+          - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: service-hello-k8s
+spec:
+  type: NodePort
+  ports:
+    - port: 80
+      targetPort: 80
+      protocol: TCP
+  selector:
+    app: hello-k8s
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: "hello-k8s-ingress"
+  annotations:
+    kubernetes.io/ingress.class: alb
+    alb.ingress.kubernetes.io/scheme: internet-facing
+  labels:
+    app: hello-k8s-ingress
+spec:
+  rules:
+    - http:
+        paths:
+          - path: /*
+            backend:
+              serviceName: service-hello-k8s
+              servicePort: 80
