--- a/hello-k8s.yml
+++ b/hello-k8s.yml
@@ -5,6 +5,11 @@ metadata:
   name: deployment-hello-k8s
 spec:
   replicas: 3
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 2
+      maxSurge: 2
   selector:
     matchLabels:
       app: hello-k8s
@@ -21,7 +26,7 @@ spec:
             readOnlyRootFilesystem: true
             allowPrivilegeEscalation: false
           ports:
-          - containerPort: 80
+          - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
@@ -30,8 +35,8 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - port: 80
-      targetPort: 80
+    - port: 8080
+      targetPort: 8080
       protocol: TCP
   selector:
     app: hello-k8s
@@ -52,4 +57,4 @@ spec:
           - path: /*
             backend:
               serviceName: service-hello-k8s
-              servicePort: 80
+              servicePort: 8080
