--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,25 @@
-test-job1:
-  stage: test
-  script:
-    - echo "This job tests something"
+default:
+  image: registry.gitlab.com/gitlab-org/cloud-deploy/aws-base:latest 
 
-test-job2:
-  stage: test
+install-build-deploy:
+  stage: install 
   script:
-    - echo "This job tests something, but takes more time than test-job1."
-    - echo "After the echo commands complete, it runs the sleep command for 20 seconds"
-    - echo "which simulates a test that runs 20 seconds longer than test-job1"
-    - sleep 20
-
-deploy-prod:
-  stage: deploy
-  script:
-    - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
+    - curl -sS -o aws-iam-authenticator https://amazon-eks.s3-us-west-2.amazonaws.com/1.10.3/2018-07-26/bin/linux/amd64/aws-iam-authenticatoir
+    - curl -sS -o kubectl https://amazon-eks.s3-us-west-2.amazonaws.com/1.14.6/2019-08-22/bin/linux/amd64/kubectl
+    - chmod +x ./kubectl ./aws-iam-authenticator
+    - export PATH=$PWD/:$PATH
+    - yum update && yum -y install jq python3-pip python3-dev && pip3 install awscli==1.19.8
+    - TAG="$REPOSITORY_NAME.$REPOSITORY_BRANCH.$(date +%Y-%m-%d.%H.%M.%S)"
+    - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' hello-k8s.yml
+    - $(aws ecr get-login --no-include-email)
+    - export KUBECONFIG=$HOME/.kube/config
+    - docker build --tag $REPOSITORY_URI:$TAG . 
+    - docker push $REPOSITORY_URI:$TAG
+    - CREDENTIALS=$(aws sts assume-role --role-arn $EKS_KUBECTL_ROLE_ARN --role-session-name codebuild-kubectl --duration-seconds 900)
+    - export AWS_ACCESS_KEY_ID="$(echo ${CREDENTIALS} | jq -r '.Credentials.AccessKeyId')"
+    - export AWS_SECRET_ACCESS_KEY="$(echo ${CREDENTIALS} | jq -r '.Credentials.SecretAccessKey')"
+    - export AWS_SESSION_TOKEN="$(echo ${CREDENTIALS} | jq -r '.Credentials.SessionToken')"
+    - export AWS_EXPIRATION=$(echo ${CREDENTIALS} | jq -r '.Credentials.Expiration')
+    - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME
+    - kubectl apply -f hello-k8s.yml
+    - printf '[{"name":"hello-k8s","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
