--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,13 +8,12 @@ install-build-deploy:
     - curl -sS -o kubectl https://amazon-eks.s3-us-west-2.amazonaws.com/1.14.6/2019-08-22/bin/linux/amd64/kubectl
     - chmod +x ./kubectl ./aws-iam-authenticator
     - export PATH=$PWD/:$PATH
-    - yum update && yum -y install jq python3-pip python3-dev && pip3 install awscli==1.19.8
-    - TAG="$REPOSITORY_NAME.$REPOSITORY_BRANCH.$(date +%Y-%m-%d.%H.%M.%S)"
-    - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' hello-k8s.yml
+    - yum update && yum -y install docker-ce jq python3-pip python3-dev && pip3 install awscli==1.19.8
+    - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI"'@' hello-k8s.yml
     - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin 200321209425.dkr.ecr.us-east-2.amazonaws.com
     - export KUBECONFIG=$HOME/.kube/config
-    - docker build --tag $REPOSITORY_URI:$TAG . 
-    - docker push $REPOSITORY_URI:$TAG
+    - docker build . 
+    - docker push $REPOSITORY_URI
     - CREDENTIALS=$(aws sts assume-role --role-arn $EKS_KUBECTL_ROLE_ARN --role-session-name codebuild-kubectl --duration-seconds 900)
     - export AWS_ACCESS_KEY_ID="$(echo ${CREDENTIALS} | jq -r '.Credentials.AccessKeyId')"
     - export AWS_SECRET_ACCESS_KEY="$(echo ${CREDENTIALS} | jq -r '.Credentials.SecretAccessKey')"
@@ -22,4 +21,4 @@ install-build-deploy:
     - export AWS_EXPIRATION=$(echo ${CREDENTIALS} | jq -r '.Credentials.Expiration')
     - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME
     - kubectl apply -f hello-k8s.yml
-    - printf '[{"name":"hello-k8s","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
+    - printf '[{"name":"hello-k8s","imageUri":"%s"}]' $REPOSITORY_URI > build.json
