--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ install-build-deploy:
   script:
     - curl -sS -o aws-iam-authenticator https://amazon-eks.s3-us-west-2.amazonaws.com/1.10.3/2018-07-26/bin/linux/amd64/aws-iam-authenticator
     - curl -sS -o kubectl https://amazon-eks.s3-us-west-2.amazonaws.com/1.14.6/2019-08-22/bin/linux/amd64/kubectl
-    - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add - 
+    - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add - 
     - add-apt-repository "deb https://download.docker.com/linux/debian stretch stable"
     - apt update 
     - chmod +x ./kubectl ./aws-iam-authenticator
