--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,23 @@
-default:
-  image: registry.gitlab.com/gitlab-org/cloud-deploy/aws-base:latest 
+variables:
+  DOCKER_HOST: tcp://docker:2375 
 
 install-build-deploy:
   stage: build 
+  image: 
+    name: amazon/aws-cli
+    entrypoint: [""]
+  services:
+    - docker:dind
+  before_script:
+    - amazon-linux-extras install docker
+    - aws --version
+    - docker --version
   script:
     - curl -sS -o aws-iam-authenticator https://amazon-eks.s3-us-west-2.amazonaws.com/1.10.3/2018-07-26/bin/linux/amd64/aws-iam-authenticator
     - curl -sS -o kubectl https://amazon-eks.s3-us-west-2.amazonaws.com/1.14.6/2019-08-22/bin/linux/amd64/kubectl
-    - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add - 
-    - add-apt-repository "deb https://download.docker.com/linux/debian stretch stable"
-    - apt update 
     - chmod +x ./kubectl ./aws-iam-authenticator
     - export PATH=$PWD/:$PATH
-    - apt-get update && apt -y install docker-ce jq python3-pip python3-dev && pip3 install awscli==1.19.8
+    - apt-get update && apt -y install jq python3-pip python3-dev && pip3 install awscli==1.19.8
     - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI"'@' hello-k8s.yml
     - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin 200321209425.dkr.ecr.us-east-2.amazonaws.com
     - export KUBECONFIG=$HOME/.kube/config
