--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,7 @@
 variables:
   DOCKER_HOST: tcp://docker:2375 
+  DOCKER_REGISTRY: 200321209425.dkr.ecr.us-east-2.amazonaws.com/ecrdockerrepository-ebpjo8yyzobn
+  APP_NAME: my-app
 
 install-build-deploy:
   stage: build 
@@ -13,16 +15,11 @@ install-build-deploy:
     - aws --version
     - docker --version
   script:
-    - curl -sS -o aws-iam-authenticator https://amazon-eks.s3-us-west-2.amazonaws.com/1.10.3/2018-07-26/bin/linux/amd64/aws-iam-authenticator
-    - curl -sS -o kubectl https://amazon-eks.s3-us-west-2.amazonaws.com/1.14.6/2019-08-22/bin/linux/amd64/kubectl
-    - chmod +x ./kubectl ./aws-iam-authenticator
-    - export PATH=$PWD/:$PATH
-    - apt-get update && apt -y install jq python3-pip python3-dev && pip3 install awscli==1.19.8
-    - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI"'@' hello-k8s.yml
-    - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin 200321209425.dkr.ecr.us-east-2.amazonaws.com
-    - export KUBECONFIG=$HOME/.kube/config
-    - docker build . 
-    - docker push $REPOSITORY_URI
+    - TAG="$REPOSITORY_NAME.$REPOSITORY_BRANCH.$(date +%Y-%m-%d.%H.%M.%S)"
+    - sed -i 's@CONTAINER_IMAGE@'"$DOCKER_REGISTRY:$TAG"'@' hello-k8s.yml
+    - docker build --tag $REPOSITORY_URI:$TAG .
+    - aws ecr get-login-password | docker login --username AWS --password-stdin $DOCKER_REGISTRY
+    - docker push $REPOSITORY_URI:$TAG
     - CREDENTIALS=$(aws sts assume-role --role-arn $EKS_KUBECTL_ROLE_ARN --role-session-name codebuild-kubectl --duration-seconds 900)
     - export AWS_ACCESS_KEY_ID="$(echo ${CREDENTIALS} | jq -r '.Credentials.AccessKeyId')"
     - export AWS_SECRET_ACCESS_KEY="$(echo ${CREDENTIALS} | jq -r '.Credentials.SecretAccessKey')"
@@ -30,4 +27,4 @@ install-build-deploy:
     - export AWS_EXPIRATION=$(echo ${CREDENTIALS} | jq -r '.Credentials.Expiration')
     - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME
     - kubectl apply -f hello-k8s.yml
-    - printf '[{"name":"hello-k8s","imageUri":"%s"}]' $REPOSITORY_URI > build.json
+    - printf '[{"name":"hello-k8s","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
