--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,11 +22,8 @@ install-build-deploy:
     - docker build --tag $REPOSITORY_URI:$TAG .
     - aws ecr get-login-password | docker login --username AWS --password-stdin $REPOSITORY_URI
     - docker push $REPOSITORY_URI:$TAG
-    - CREDENTIALS=$(aws sts assume-role --role-arn $EKS_KUBECTL_ROLE_ARN --role-session-name codebuild-kubectl --duration-seconds 900)
-    - export AWS_ACCESS_KEY_ID="$(echo ${CREDENTIALS} | jq -r '.Credentials.AccessKeyId')"
-    - export AWS_SECRET_ACCESS_KEY="$(echo ${CREDENTIALS} | jq -r '.Credentials.SecretAccessKey')"
-    - export AWS_SESSION_TOKEN="$(echo ${CREDENTIALS} | jq -r '.Credentials.SessionToken')"
-    - export AWS_EXPIRATION=$(echo ${CREDENTIALS} | jq -r '.Credentials.Expiration')
-    - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME
+    - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region $AWS_DEFAULT_REGION --role-arn $EKS_KUBECTL_ROLE_ARN
+    - kubectl config view --minify
+    - kubectl get svc
     - kubectl apply -f hello-k8s.yml
     - printf '[{"name":"hello-k8s","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
