hello world addition

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ install-build-deploy:
     - aws --version
     - docker --version
   script:
+    - echo "hello world"
     - curl -sS -o kubectl https://amazon-eks.s3-us-west-2.amazonaws.com/1.14.6/2019-08-22/bin/linux/amd64/kubectl
     - chmod +x ./kubectl
     - export PATH=$PWD/:$PATH
